--- a/template.env
+++ b/template.env
@@ -13,7 +13,7 @@ VULN_DB_PASSWORD='mongoSecureChain'
 ALGORITHM = 'your_preferred_algorithm'  # e.g., 'HS256'
 ACCESS_TOKEN_EXPIRE_MINUTES = 'access_token_expire_minutes'
 REFRESH_TOKEN_EXPIRE_DAYS = 'refresh_token_expire_days'
-JWT_ACCESS_SECRET_KEY = 'your_access_secret_key' # Need to be equal to the one in other services
+JWT_ACCESS_SECRET_KEY = 'your_access_secret_key'
 JWT_REFRESH_SECRET_KEY = 'your_refresh_secret_key'
 
 # Api key for github services
