--- a/template.env
+++ b/template.env
@@ -2,6 +2,7 @@
 GRAPH_DB_URI='bolt://neo4j:7687'
 VULN_DB_URI='mongodb://mongoSecureChain:mongoSecureChain@mongodb:27017/admin'
 ALLOWED_ORIGINS='["http://securechain-gateway:8000"]'
+GATEWAY_ALLOWED_ORIGINS='["http://localhost:3000"]' # Change in production
 
 # Databases settings
 GRAPH_DB_USER='neo4j'
@@ -10,11 +11,12 @@ VULN_DB_USER='mongoSecureChain'
 VULN_DB_PASSWORD='mongoSecureChain'
 
 # Secrets for JWT
-ALGORITHM = 'your_preferred_algorithm'  # e.g., 'HS256'
-ACCESS_TOKEN_EXPIRE_MINUTES = 'access_token_expire_minutes'
-REFRESH_TOKEN_EXPIRE_DAYS = 'refresh_token_expire_days'
-JWT_ACCESS_SECRET_KEY = 'your_access_secret_key'
-JWT_REFRESH_SECRET_KEY = 'your_refresh_secret_key'
+SECURE='FALSE' # Set to True in production
+ALGORITHM='your_preferred_algorithm'  # e.g., 'HS256'
+ACCESS_TOKEN_EXPIRE_MINUTES='access_token_expire_minutes'
+REFRESH_TOKEN_EXPIRE_DAYS='refresh_token_expire_days'
+JWT_ACCESS_SECRET_KEY='your_access_secret_key'
+JWT_REFRESH_SECRET_KEY='your_refresh_secret_key'
 
 # Api key for github services
 GITHUB_GRAPHQL_API_KEY='add_your_api_key'
