--- a/template.env
+++ b/template.env
@@ -1,8 +1,8 @@
 # For dockerized backend and database
 GRAPH_DB_URI='bolt://neo4j:7687'
 VULN_DB_URI='mongodb://mongoSecureChain:mongoSecureChain@mongodb:27017/admin'
-ALLOWED_ORIGINS='["http://securechain-gateway:8000"]'
-GATEWAY_ALLOWED_ORIGINS='["http://localhost:3000"]' # Change in production
+DOCS_URL='/docs' # Comment this on production
+SERVICES_ALLOWED_ORIGINS='["http://securechain-gateway:8000"]'
 
 # Databases settings
 GRAPH_DB_USER='neo4j'
@@ -11,7 +11,7 @@ VULN_DB_USER='mongoSecureChain'
 VULN_DB_PASSWORD='mongoSecureChain'
 
 # Secrets for JWT
-SECURE='FALSE' # Set to True in production
+SECURE_COOKIES=False # Set to True in production
 ALGORITHM='your_preferred_algorithm'  # e.g., 'HS256'
 ACCESS_TOKEN_EXPIRE_MINUTES='access_token_expire_minutes'
 REFRESH_TOKEN_EXPIRE_DAYS='refresh_token_expire_days'
