--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -38,18 +38,35 @@ jobs:
           tag_name: ${{ steps.get_variables.outputs.VERSION }}
           body: ${{ steps.changelog.outputs.changes }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GIT_TOKEN }}
 
-      - name: Build and push Docker image to GHCR
-        uses: docker/build-push-action@v4
+      - name: Build arm64 image
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
+          platforms: linux/arm64
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/securechain-gateway:latest-arm64
+            ghcr.io/${{ github.repository_owner }}/securechain-gateway:${{ steps.get_variables.outputs.VERSION }}-arm64
+
+      - name: Build amd64 image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64
           tags: |
             ghcr.io/${{ github.repository_owner }}/securechain-gateway:latest
             ghcr.io/${{ github.repository_owner }}/securechain-gateway:${{ steps.get_variables.outputs.VERSION }}
