--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -51,22 +51,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GIT_TOKEN }}
 
-      - name: Build arm64 image
+      - name: Build and push multi-arch image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          platforms: linux/arm64
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/securechain-gateway:latest-arm64
-            ghcr.io/${{ github.repository_owner }}/securechain-gateway:${{ steps.get_variables.outputs.VERSION }}-arm64
-
-      - name: Build amd64 image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/securechain-gateway:latest
             ghcr.io/${{ github.repository_owner }}/securechain-gateway:${{ steps.get_variables.outputs.VERSION }}
