--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -60,3 +60,5 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/securechain-gateway:latest
             ghcr.io/${{ github.repository_owner }}/securechain-gateway:${{ steps.get_variables.outputs.VERSION }}
+          provenance: true
+          sbom: true
