--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -17,6 +17,23 @@ services:
         condition: service_healthy
       securechain-depex:
         condition: service_healthy
+      securechain-vexgen:
+        condition: service_healthy
+
+  securechain-auth:
+    container_name: securechain-auth
+    image: ghcr.io/securechaindev/securechain-auth:latest
+    env_file:
+      - ../app/.env
+    ports:
+      - '8000'
+    networks:
+      - securechain
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   securechain-depex:
     container_name: securechain-depex
@@ -33,9 +50,9 @@ services:
       timeout: 3s
       retries: 5
 
-  securechain-auth:
-    container_name: securechain-auth
-    image: ghcr.io/securechaindev/securechain-auth:latest
+  securechain-vexgen:
+    container_name: securechain-vexgen
+    image: ghcr.io/securechaindev/securechain-vexgen:latest
     env_file:
       - ../app/.env
     ports:
