chore: Updated template env

--- a/template.env
+++ b/template.env
@@ -20,3 +20,14 @@ JWT_REFRESH_SECRET_KEY='your_refresh_secret_key'
 
 # Api key for github services
 GITHUB_GRAPHQL_API_KEY='add_your_api_key'
+
+# Git python environments
+# Git python refresh required env variable. Use one of the following values:
+# - quiet|q|silence|s|silent|none|n|0: for no message or exception
+# - warn|w|warning|log|l|1: for a warning message (logging level CRITICAL, displayed by default)
+# - error|e|exception|raise|r|2: for a raised exception
+GIT_PYTHON_REFRESH='select_your option'
+GIT_CONFIG_SYSTEM='/dev/null'
+GIT_CONFIG_GLOBAL='/dev/null'
+GIT_LFS_SKIP_SMUDGE=1
+GIT_TEMPLATE_DIR=''
